--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "1.4.0",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.0.0",
+    "express-session": "^1.17.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
