--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
